--- a/assignment 4/index.html
+++ b/assignment 4/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
- <title>Assignment 4</title>
+  <meta charset="utf-8">
+  <title>Module 4 Solution Starter</title>
+  <script src="js/SpeakHello.js"></script>
+  <script src="js/SpeakGoodBye.js"></script>
+  <script src="js/script.js"></script>
 </head>
 <body>
-  <script src= "script.js"></script>
+  <h1>Module 4 Solution </h1>
+  <p> Open the console to see the output</p>
 </body>
 </html>
